refactor: refactored notifications controller
