# swagger/v1/swagger.yaml
@@ -87,3 +87,35 @@ paths:
           description: unauthorized
         '403':
           description: forbidden
+        '422':
+          description: unprocessable entity
+  "/api/notifications":
+    get:
+      summary: List all notifications
+      tags:
+      - Notifications
+      security:
+      - Bearer: []
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
+  "/api/notifications/{id}":
+    put:
+      summary: Read notification
+      tags:
+      - Notifications
+      security:
+      - Bearer: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: successful
+        '401':
+          description: unauthorized
